@@ -923,7 +923,7 @@ body {
 
 <p><strong>quest_item</strong> | <code>bool</code> | If true, this item is a quest item and can not be dropped, stashed, or sold.</p>
 
-<p><strong>no_stash</strong> | <code>bool</code> | If true, this item can not be stashed.</p>
+<p><strong>no_stash</strong> | <code>["ignore", "private", "shared", "all"]</code> | If not set to &lsquo;ignore&rsquo;, this item will not be able to be put in the corresponding stash.</p>
 
 <hr />
 
