@@ -3,6 +3,7 @@ Flare v1.11 (WIP)
 Engine features:
 
 * Players now have their own private stash in addition to the shared stash.
+* Expanded the 'no_stash' Item variable to account for having multiple stashes.
 
 Engine fixes:
 
